<resources>
    <string name="app_name">Inventory App</string>
    <string name="add_new_product_layout">Add New Product</string>
    <string name="supplier_phone_number_hint">Phone Number</string>
    <string name="supplier_name_hint">Name</string>
    <string name="supplier_info_text">Supplier Info</string>
    <string name="product_overview_text">Product overview</string>
    <string name="product_quantity_hint">Quantity</string>
    <string name="product_name_hint">Name</string>
    <string name="product_price_hint">Price</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="dummy_data">Dummy Data</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="get_started_by_adding_a_product">Add new product now!</string>
    <string name="it_s_a_product_lonely_here">It\'s a product lonely here...</string>
    <string name="sale">sale</string>
    <string name="add_product">Add product</string>
    <string name="edit_product">Edit product</string>
    <string name="edit_insert_product_failed">Error saving product</string>
    <string name="editor_insert_product_successful">Successful saving product</string>
    <string name="editor_update_product_failed">Error with updating Product</string>
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current  [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current  [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current  [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current  [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="error_with_deleting_product">Error with deleting product</string>
    <string name="delete_product_successful">delete product successful</string>

    <string name="product_name">Name:</string>

    <string name="product_price">Price:</string>

    <string name="product_quantity">Quantity:</string>

    <string name="supplier_name">Supplier Name:</string>

    <string name="supplier_number">Supplier Number:</string>

    <string name="call">Call</string>

    <string name="add_quantity">Add</string>

    <string name="sell_quantity">Sell</string>

    <string name="delete_success">Delete successful</string>

    <string name="delete_error">Error with deleting the product</string>

    <string name="action_edit">Edit</string>

    <string name="sold_out">Product sold out!</string>

    <string name="product_details_label">Product Details</string>

    <string name="Sorry_you_should_fill_product_name_field">Sorry, you should fill product name field</string>

    <string name="Sorry_you_should_fill_product_price_field">Sorry, you should fill product price field</string>

    <string name="Sorry_you_should_fill_product_quantity_field">Sorry, you should fill product quantity field</string>

    <string name="Sorry_you_should_fill_supplier_name_field">Sorry, you should fill supplier name field</string>

    <string name="Sorry_you_should_fill_supplier_phone_field">Sorry, you should fill supplier phone field</string>

</resources>
