<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DataReceptionMainActivity">

    <LinearLayout
        android:id="@+id/container_product_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/product_overview_text"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
             />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/product_price_hint"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/product_quantity_hint"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_info_text"
            style="@style/CategoryStyle"
            android:layout_gravity="top"
            />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- supplier field -->
            <EditText
                android:id="@+id/text_supplier_name"
                android:hint="@string/supplier_name_hint"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/text_supplier_number"
                android:hint="@string/supplier_phone_number_hint"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
